Fix style bug in header on mobile

--- a/components/header/style.scss
+++ b/components/header/style.scss
@@ -13,7 +13,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	width: $width;
+	max-width: $width;
 	margin: 0 auto;
 	padding: 0;
 }
